# ai-private-chef-butler

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  langgraph.json  main.py  pyproject.toml  start-dev.bat  start-prod.bat
app/: auth.py  main.py
app/agents/: personal_chief.py  system_prompt.txt
app/api/v1/: PHASE3_SUMMARY.md  RECIPES_API_DOCS.md  auth.py  chat.py  cook_history.py  feishu.py  ingredients.py  meal_plan.py  nutrition.py  oss.py  preferences.py  (+3 more)
app/common/: checkpoint_saver.py  database.py  logger.py
app/models/: db.py  schemas.py
docs/: DEPLOYMENT.md  ROADMAP.md
frontend/: middleware.ts  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AddToRecipeButton.tsx  AuthGuard.tsx  ChatInput.tsx  ChatMessage.tsx  ClientLayout.tsx  ConfirmDialog.tsx  DatePicker.tsx  ErrorBoundary.tsx  FeishuSettings.tsx  Loading.tsx  MultiRecipeSave.tsx  RecipeCard.tsx  RecipeDetailModal.tsx  RecipePanel.tsx  ResponsiveNav.tsx  Toast.tsx
frontend/hooks/: useAuth.tsx  useFeishuStatus.ts  useSpeechRecognition.ts  useSpeechSynthesis.ts
frontend/lib/: api.ts  authApi.ts  chatStore.ts  env.ts  feishuApi.ts  historyStore.ts  imageUtils.ts  ingredientStore.ts  mealPlanStore.ts  preferenceStore.ts  recipeParser.ts  recipeStore.ts  shoppingListApi.ts  shoppingListGenerator.ts  shoppingListStore.ts
frontend/types/: chat.ts  history.ts  ingredient.ts  mealPlan.ts  preference.ts  recipe.ts  shoppingList.ts  user.ts
nginx/: nginx.conf
scripts/: migrate_data.py
(+10 files in other folders)
