[project]
name = "ai-skilldemo"
version = "0.1.0"
description = "AI私厨 - 食谱推荐助手"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-oss-v2>=1.2.5",
    "oss2>=2.18.0",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.24",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.6",
    "uvicorn>=0.32.0",
    "requests>=2.32.0",
    "langchain-tavily>=0.2.18",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
